# aura-agent

./: .gitignore  CMakeLists.txt  Dockerfile.cross  Makefile.solaris  README.md  entrypoint.sh  users.json
bot_handlers/: register.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
libs/: discovery.hpp  metrics.hpp  notification.hpp  solaris_metrics.hpp
services/: discovery.cpp  metrics.cpp  notification.cpp  solaris_metrics.cpp
src/: config.json  main.cpp  solaris.cpp  target.json
